<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">ArrowLogger</string>
  <string name="hello_world">Hello ArrowLogger world!</string>
  <string name="print_log_out">Arrow Log</string>
  <string name="print_pro_log_out">Pro Arrow Log</string>
  <string name="input_hint">Type Here</string>

  <string name="input_title_width">Arrow Width</string>
  <string name="input_hint_width">7</string>
  <string name="input_title_height">Arrow Height</string>
  <string name="input_hint_height">5</string>
  <string name="log_fyi">see your log cat</string>

</resources>
