<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ExampleActivity">

    <TextView
      android:text="@string/hello_world"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dip" />

    <EditText
      android:id="@+id/input_log_edit_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:hint="@string/input_hint" />

    <Button
      android:id="@+id/print_log_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/print_log_out"
      android:layout_marginTop="29dp" />

    <View
      android:layout_width="match_parent"
      android:layout_height="2dip"
      android:background="@android:color/black"
      android:layout_marginTop="15dip"
      android:layout_marginBottom="15dip" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:text="@string/input_title_width" />

    <EditText
      android:id="@+id/prop_log_width_edit_text"
      android:layout_width="100dip"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:inputType="number"
      android:text="@string/input_hint_width" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:text="@string/input_title_height" />

    <EditText
      android:id="@+id/prop_log_height_edit_text"
      android:layout_width="100dip"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:inputType="number"
      android:text="@string/input_hint_height" />

    <Button
      android:id="@+id/print_pro_log_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/print_pro_log_out"
      android:layout_marginTop="29dp" />

  </LinearLayout>
</ScrollView>
